--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
 			<version>1.18.30</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- PostgreSQL Driver -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- Use a recent version -->
+			<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
